--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,7 +23,11 @@
         <li>
           <a style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a>
         </li>
-        <li><a style="cursor: pointer">Delete recipe</a></li>
+        <li>
+          <a style="cursor: pointer" (click)="onDeleteRecipe()"
+            >Delete recipe</a
+          >
+        </li>
       </ul>
     </div>
   </div>
